# gemini-assistant

./: .gitignore  FILE_OVERVIEW.md  README.md
smart-speaker-gemini/: .env  README.md  platform_utils.py  pyproject.toml  run.sh  smart_speaker.py  test-env.py  test_audio.sh
smart-speaker-gemini/smart_speaker_gemini.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
